--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "homepage": "https://github.com/deepblue-will/coffee-power-assert#readme",
   "devDependencies": {
+    "browser-sync": "^2.7.6",
     "coffee-script": "^1.9.3",
     "espower-coffee": "^0.10.0",
     "gulp": "^3.8.11",
+    "gulp-coffee": "^2.3.1",
+    "gulp-jade": "^1.0.1",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-mocha": "^2.1.0",
+    "gulp-ruby-sass": "^1.0.5",
     "karma": "^0.12.35",
     "karma-chrome-launcher": "^0.1.12",
     "karma-coffee-preprocessor": "^0.2.1",
